# kotto

./: .gitignore  Cargo.toml  LICENSE.md  README.md  bootstrap.ts  cli.ts  const.ts  deno.json  deps.ts  errors.ts  install.sh  llm.ts  log.ts  mod.ts  prompts.ts  utils.ts
examples/: be-encouraging.ts  chat.ts  contact.ts  deno.json  extract-feedback.ts  extract.ts  fix.ts  from-string-to-type.ts  github-trending.ts  hackernews.ts  hello-world-interactive.ts  hello-world.ts  hello.ts  knowledge-base.ts  summarise.ts
kottoc/: Cargo.toml  config.rs  prompts.rs  tasks.rs  util.rs
kottoc/filter/: class_decl.rs  fn_decl.rs  mod.rs
tc/: Cargo.toml  args.rs  build.rs  config.rs  emit.rs  main.rs  prompts.rs  tasks.rs  util.rs
tc/filter/: class_decl.rs  fn_decl.rs  function.rs  mod.rs  type_alias_decl.rs  type_ref.rs
tc/proto/: trackway.proto
tc/runtime/: emit.rs
tc/src/: apps.rs  client.rs  config.rs  error.rs  main.rs  proto.rs  repl.rs  runtime.rs  ts_module_loader.rs
tc/src/runtime/: compile.rs  emit.rs  mod.rs  ts_module_loader.rs
