[workspace]
resolver = "2"
members = [
    "tc"
]

[workspace.package]
authors = ["the Trackway authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/brokad/trackway"

[workspace.dependencies]
deno_ast = { version = "0.27.0", features = [ "transpiling", "codegen" ] }

anyhow = "1.0.57"

tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = [ "fmt", "env-filter" ] }