[package]
name = "trackway-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.171", features = [ "derive" ] }
serde_json = "1.0.102"
toml = "0.7.6"

home = "0.5.5"
semver = "1.0.17"

atty = "0.2.14"

clap = { version = "4.3.11", features = [ "derive", "env" ] }

tonic = "0.9.2"
prost = "0.11.9"

futures = "0.3.28"
tokio = { version = "1.29.1", features = [ "full" ] }

deno_core = "0.199.0"
deno_ast = { version = "0.27.3", features = [ "transpiling" ] }
serde_v8 = "0.110.0"

tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = [ "fmt", "env-filter" ] }

[build-dependencies]
tonic-build = "0.9.2"